--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.url=jdbc:h2:mem:dogDatabase
+spring.jpa.hibernate.ddl-auto=update
 
 graphql.servlet.mapping=/graphql
 graphql.servlet.enabled=true
